--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,7 @@
 
     <tr>
     <th><%= f.label :memo ,"スケジュールメモ" %></th>
-    <td><%= f.text_area :memo %></td>
+    <td><%= f.text_area :memo,  class: 'form-control',size: "40x10"%></td>
   </tr>
   </table>
 
