--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <ul>
-    <li><%= link_to "← 情報一覧に戻る", :users %></li>
+    <li><%= link_to "← 予定一覧に戻る", :users %></li>
     <li><%= link_to "編集", :edit_user %></li>
   </ul>
 </div>
